--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,9 +16,9 @@ jobs:
       fail-fast: false
       matrix:
         os:
-        - ubuntu
+        - linux
         config:
-        - "3.6.8" # For CentOS 7 deployments
+        - "3.6" # For CentOS 7 deployments
         - "3.7"
         - "3.8"
         - "3.9"
